test/libyul/yulSyntaxTests/instructions.yul
{ pop }
// ====
// dialect: yul
// ----
// ParserError 6913: (6-7): Call or assignment expected.
